[package]
name = "group-json-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12.2", features = [ "json", "blocking"] }
eframe = "0.27.2"
egui_extras = {version = "0.27.2", features = ["all_loaders"]}
# git2 = ""
tokio = { version = "1", features = ["full"] }
image = "0.25.1"